--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Alarm</string>
+    <string name="app_name">알람</string>
+    <string name="alarm_status">등록되어있는 알람이 없습니다.</string>
 </resources>
