--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,14 @@
     <string name="alarm_status">등록되어있는 알람이 없습니다.</string>
     <string name="add">추가</string>
     <string name="cancel">취소</string>
-    <string name="alarm_add">Alarm Add</string>
+    <string name="alarm_add">추가</string>
+    <string name="calendar">달력</string>
+
+    <string name="sunday">일</string>
+    <string name="monday">월</string>
+    <string name="tuesday">화</string>
+    <string name="wednesday">수</string>
+    <string name="thursday">목</string>
+    <string name="friday">금</string>
+    <string name="saturday">토</string>
 </resources>
