--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">알람</string>
-    <string name="alarm_status">등록되어있는 알람이 없습니다.</string>
+    <string name="alarm_empty">등록되어있는 알람이 없습니다.</string>
     <string name="add">추가</string>
     <string name="cancel">취소</string>
     <string name="alarm_add">추가</string>
