--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="cancel">취소</string>
     <string name="alarm_add">추가</string>
     <string name="calendar">달력</string>
+    <string name="edit">수정</string>
 
     <string name="sunday">일</string>
     <string name="monday">월</string>
