--- a/refc/app/src/main/res/values/strings.xml
+++ b/refc/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WeatherAlarm</string>
+    <string name="add">add</string>
+    <string name="more">more</string>
 </resources>
