[add] popup menu

--- a/refc/app/src/main/res/values/strings.xml
+++ b/refc/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WeatherAlarm</string>
     <string name="add">add</string>
     <string name="more">more</string>
+    <string name="delete">delete</string>
 </resources>
