--- a/refc/app/src/main/res/values/strings.xml
+++ b/refc/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="add">add</string>
     <string name="more">more</string>
     <string name="delete">delete</string>
+    <string name="save">저장</string>
+    <string name="cancel">취소</string>
 </resources>
