--- a/refc/app/src/main/res/values-night/strings.xml
+++ b/refc/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="delete">delete</string>
+    <string name="monday">월</string>
 </resources>
