[add] notification image가 1:1 비율로 설정안되는 현상이있어 확인이 필요함 계속 타원으로 나오게됨.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="friday">금</string>
     <string name="saturday">토</string>
     <string name="title_domain">Module Title</string>
+    <string name="temperature">%s℃</string>
+    <string name="max_min_temperature">%s℃ / %s℃</string>
 </resources>
