[add] imageView linear layout 에서 1:1비율로 설정할 수 없어 dimens 로 고정 크기 설정 비 / 눈 체크필요함! - 맑음 상태일땐 0으로 오는것을 확인 완료함.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_domain">Module Title</string>
     <string name="temperature">%s℃</string>
     <string name="max_min_temperature">%s℃ / %s℃</string>
+    <string name="weather">날씨</string>
 </resources>
