[add] 등록 및 수정창에 머티리얼 디자인가이드를 따르도록 변경할 예정 - 완료 gradle version 수정 isCancelable true 로 변경 현재보다 이전날짜를 저장하려는 경우 snackBak 를 노출하도록 로직 구성 - 버튼위에 나타남. 수정이 필요함.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="temperature">%s℃</string>
     <string name="max_min_temperature">%s℃ / %s℃</string>
     <string name="weather">날씨</string>
+    <string name="title">제목</string>
 </resources>
